add writeup and delete template code

--- a/index.Rmd
+++ b/index.Rmd
@@ -31,6 +31,21 @@ library(car)
 In this project, our group set out to take a more in-depth analysis of draft picks over the last 20 years of three of the four major sports leagues in North America. We aimed to see what what places produced the best picks and then what teams in the leagues are the ones making the best valued picks. We pulled our dataset for the [NHL](https://www.kaggle.com/datasets/mattop/nhl-draft-hockey-player-data-1963-2022), [NBA](https://www.kaggle.com/datasets/benwieland/nba-draft-data), and the [NFL](https://www.kaggle.com/datasets/jacklichtenstein/espn-nfl-draft-prospect-data?select=nfl_draft_prospects.csv) from Kaggle. 
 
 # NHL 
+In the NHL there are seven rounds of draft picks for all 32 teams. Many of these players don’t pan out because the process of getting to the NHL is different than most other sports. Most players are drafted after their senior year of high school. Unless you are the number or some years the top few picks then you will not be going to the NHL right away. You will have to play junior hockey in order to develop and prepare your body for the NHL game. There are two different paths most people take to develop, Major Junior Hockey and College Hockey. There are other paths but these are the two most common. So most teams draft players in the hopes that they will develop into an NHL player instead of other sports when they are “pro-ready” at the time of the draft. Because of this process many players do not pan out into what they were drafted to be. So in my analysis of draft picks I will start off by looking at those players who did pan out.
+
+I took the draft data from those after the year 2000 and before the year 2018. I removed the last 5 years mainly because many players from those draft classes have not had enough experience or have not had enough time to develop into NHL players yet so their stats will not be a representation of what they can do in the NHL. I also looked at players that had at least 80 games played in the NHL. My representation of a successful NHL player is one that has played around a season in the NHL which is 82 games so I thought that 80 would be an appropriate number. 
+
+With the values in the dataset I tried to create a variable that would represent the overall value of each pick. I started with the point share statistic. Point share is calculated over a few statistics that include:
+
+- Marginal Goals For = (team goals) - (7 / 12) × (team games) × (league goals per game)
+- Marginal Goals Against = (1 + (7 / 12)) × (team games) × (league goals per game) - (team goals against)
+- Skater Point Shares = (marginal goals) / (marginal goals per point)
+
+“Why 7/12? At even strength a team has six players on the ice, five skaters and one goalie. Imagine each of these players having two chips to contribute to one of two buckets: offense and defense. Collectively the skaters will contribute five chips to the offensive bucket and five chips to the defensive bucket. However, the goalie will contribute both of his chips to the defensive bucket, giving the defensive bucket seven of the twelve chips.”
+
+This dataset already calculated point shares. From there I created a variable that I labeled win shares. I calculated win shares by dividing points shares by the amount of games played. I did this to see the point shares per game because it appeared from the data that those who had been in the league longer had a higher point share than those who did not have as many games played, so this evened it out for every player regardless of experience. Finally, I created a variable in which I believe calculates the value of each pick in the NHL. This variable was derived by multiplying win shares by points a player has per game and the final measurement I added was the overall pick of a player. 
+
+The reason I added win shares and points per game was because wins shares takes in defensive stats as well and only looks for goals for and against while it does not take in the total amount of points the players actually score. I added in the overall pick because this is giving us which picks have the best overall value. This means that if a player selected with the 100th pick is putting up the same production that a player that was taken with the 10th pick then the player who was picked 100th has the better value.
 
 ```{r include=FALSE}
 #initial importing of the file
@@ -96,8 +111,8 @@ nhlmosteffectivetotal1 <- nhlmosteffective %>%
   arrange(desc(valueofpick))
 ```
 
-
-```{r echo=FALSE, message=FALSE}
+Once I created the variable I aimed to explore what countries produce the best valued picks. To gauge this I averaged the value of each pick for each country represented in the data set and the results are shown in the figure below:
+```{r echo=FALSE, message=FALSE, fig.height=3}
 #This data is only representative of skaters
 #make variable that multiplies pick in draft to winshares
 nhlmosteffectiveskater1 <- nhlmosteffectivetotal1 %>%
@@ -127,8 +142,16 @@ ggplot(playerworldranking, aes(geometry = geom, fill = avgpickvalue)) +
   scale_fill_viridis(option = "magma", direction = -1)
 ```
 
+In terms of goaltenders, I used a slightly different calculation for determining the value of each goalie pick. With goaltenders you cannot use points per game and you cannot compare win shares to players because goalies play less games and the point share statistic is calculated differently for goaltenders. 
 
-```{r echo=FALSE, message=FALSE}
+Point shares are calculated slightly differently for goaltenders. It is based on the formula:
+
+Goalie Point Shares = (2 / 7) × ((marginal goals against) / (marginal goals per point))
+
+“Why 2/7? Of the seven chips contributed to the defensive bucket, two came from the goalie.”
+
+For calculating the value of each pick. I still used the win shares variable. but this time I just multiplied the win shares variable with the overall pick variable and that is how I calculated the value for each pick. I then completed the same process of summarizing the results by country and inputting it into a spatial map. The results are shown below:
+```{r echo=FALSE, message=FALSE, fig.height= 3}
 # make a plot for where the best valued goalies stem from
 goaliedata <- nhlmosteffectivetotal1 %>%
   filter(position == "G")%>%
@@ -156,6 +179,9 @@ ggplot(goalieworldranking, aes(geometry = geom, fill = avgpickvalue)) +
 ```
 
 
+The final observation I wanted to look at was which teams make the best valued picks across the NHL. I did not filter out just to successful players because when it comes to teams picking players I wanted to look at the overall body of work of the team rather than just the successes. For the metric used to evaluate the best teams I just used the win shares variable because I thought this would give me the best look at both goalies and skaters combined when it comes to just looking at teams.
+
+The results of my findings are shown in the table below:
 ```{r echo=FALSE}
 #add points per game to the skaters
 nhlppg <- nhl %>%
@@ -176,9 +202,23 @@ nhlteamranking <- nhleffectiveness %>%
   group_by(team) %>%
   summarise(avgpickvalue = mean(winshares, na.rm = TRUE))%>%
   arrange(desc(avgpickvalue))
+
+nhlteamranking%>%
+  select(team, avgpickvalue) %>% 
+  datatable(colnames = c("Team", "Average Pick Value"),
+            filter = 'top',
+            options = list(pageLength = 10, autoWidth = TRUE))
 ```
 
+## Analysis of Results
+
+
 # NFL 
+
+The NFL draft process occurs when NFL teams pick players, often attending and playing in colleges and universities across the country. The pattern that most typically occurs is the best college football players in the country are often picked in the first couple of rounds. For example, the first player picked in the first round of the draft is likely very talented and highly sought-after. A player’s performance at their college or university is an important consideration for how likely, or quickly they will be picked by an NFL. Something to consider when looking at players drafted in the NFL and their corresponding college is whether there are certain college football teams that produce some of the first picks in the NFL draft. Throughout this analysis we can determine which U.S. states produce some of the top overall NFL draft picks over fifteen years. This information can help us identify states with the top college football players, as well as determine if there are any correlations between the state a player went to school in and the NFL team they were drafted to. 
+
+Draft data is used throughout fifteen years (2006 to 2021). Before analyzing this topic, I had hypothesized that states such as Alabama, Texas, and Louisiana would have some of the highest overall draft picks. I thought this based on the stigma around large football schools in these states, and how seemingly successful they have been over the past few years. However, after using spatial visualizations to further analyze this data I found that states such as New York, Oregon, Wyoming, and Utah have had college football players drafted in the first round and had overall picks of ten or higher, over the period from 2006 to 2021. On the map provided above, these states are colored in red and orange, indicating a player picked relatively high in the first round. Something to consider when looking at this data is that the map only shows data for the first round of the NFL draft, when in reality, there are seven rounds total. If we were to alter the data and look at different rounds, we might see different results. Populations that could find these results interesting are high school recruits whose goal is to make it to the NFL. They could look at the map, or use the search function in the table to see which college or university has consistently sent players to the NFL. To personalize these results further, high school football recruits could search their position and determine what school, and NFL team, previous players have gone to.
+
 ```{r include=FALSE}
 #import the NFL draft dataset
 nfl <- read_csv("dataforNFL/nfl_draft_picks.csv")
@@ -321,257 +361,17 @@ nfl_final %>%
 
 ## Analysis
 
-You can include [links](https://www.datadreaming.org/post/r-markdown-theme-gallery/) using Markdown syntax as shown. 
-
-You should include links to relevant sites as you write. You should additionally include a list of references as the end of your blog with full citations (and relevant links).
-
-
-Visualizations, particularly interactive ones, will be well-received. That said, do not overuse visualizations. You may be better off with one complicated but well-crafted visualization as opposed to many quick-and-dirty plots. Any plots should be well-thought-out, properly labeled, informative, and visually appealing.
-
-If you want to include dynamic visualizations or tables, you should explore your options from packages that are built from [**htmlwidgets**](https://www.htmlwidgets.org/showcase_leaflet.html). These **htmlwidgets**-based packages offer ways to build lighterweight, dynamic visualizations or tables that don't require an R server to run! A more complete list of packages is available on the linked website, but a short list includes:
-
-* [**plotly**](https://plot.ly/r/): Interactive graphics with D3
-* [**leaflet**](https://rstudio.github.io/leaflet/): Interactive maps with OpenStreetMap
-* [**dygraphs**](http://rstudio.github.io/dygraphs): Interactive time series visualization
-* [**visNetwork**](http://dataknowledge.github.io/visNetwork): Network graph visualization vis.js
-* [**sparkline**](https://github.com/htmlwidgets/sparkline): Small inline charts
-* [**threejs**](https://github.com/bwlewis/rthreejs): Interactive 3D graphics
-    
-You may embed a published Shiny app in your blog if useful, but be aware that there is a limited window size for embedded objects, which tends to makes the user experience of the app worse relative to a dedicated Shiny app page. Additionally, Shiny apps will go idle after a few minutes and have to be reloaded by the user, which may also affect the user experience. 
-
-Any Shiny apps embedded in your blog should be accompanied by the link to the published Shiny app (I did this using a figure caption in the code chunk below, but you don't have to incorporate the link in this way).
-
-#{r ds-salaries-app, out.width = "100%", out.extra = 'data-external="1" frameborder="no"', fig.cap = "[Data Science Salaries Shiny #App](https://bebailey.shinyapps.io/data-science-salaries)"}
-#knitr::include_app("https://bebailey.shinyapps.io/data-science-salaries",
-#                   height = "500px")
-#```
-
-#
 
 # NBA
 
-### **DT** package
 
-The [**DT** package](https://rstudio.github.io/DT/) is great for making dynamic tables that can be displayed, searched, and filtered by the user without needing an R server or Shiny app!
 
-Note: you should load any packages you use in the `setup` code chunk as usual. The `library()` functions are shown below just for demonstration.
-
-```{r dt-example, message=FALSE, echo=TRUE}
-library(DT)
-mtcars %>% 
-  select(mpg, cyl, hp) %>% 
-  datatable(colnames = c("MPG", "Number of cylinders", "Horsepower"),
-            filter = 'top',
-            options = list(pageLength = 10, autoWidth = TRUE))
-```
-
-### **kableExtra** package
-
-You can also use [**kableExtra**](https://cran.r-project.org/web/packages/kableExtra/vignettes/awesome_table_in_html.html) for customizing HTML tables.
-
-```{r kable-example, echo=TRUE, message=FALSE}
-library(kableExtra)
-summary(cars) %>%
-  kbl(col.names = c("Speed", "Distance"),
-      row.names = FALSE) %>%
-  kable_styling(bootstrap_options = "striped",
-                full_width = FALSE) %>%
-  row_spec(0, bold = TRUE) %>%
-  column_spec(1:2, width = "1.5in") 
-```
-
-
-## Images
-
-Images and gifs can be displayed using code chunks:
-
-```{r, fig.cap='"Safe Space" by artist Kenesha Sneed', out.width="80%", fig.align="center"}
-knitr::include_graphics("img/Kenesha-Sneed_safe-space.jpeg")
-```
-
-
-```{r, fig.cap="This is a figure caption", out.width="50%", fig.align="center"}
-knitr::include_graphics("https://media.giphy.com/media/H7ZrrA9V2pd3Tehdds/giphy.gif")
-```
-
-You may also use Markdown syntax for displaying images as shown below, but code chunks offer easier customization of the image size and alignment.
-
-![This is another figure caption](https://media.giphy.com/media/8i5IvxP9ZLgmjXN1BF/giphy.gif)
-
-Either way, the file path can be a local path within your project directory or a URL for an image hosted online. This syntax works for PNG, PDF, JPG, and even GIF formats.
-
-
-## Videos
-
-You can use code chunks or Markdown syntax include links to any valid YouTube or Vimeo URLs (see [here](https://bookdown.org/yihui/rmarkdown/learnr-videos.html) for details) or point to a location within your project directory. 
-
-Code chunk:
-
-```{r, out.width="80%", fig.align="center"}
-knitr::include_url("https://www.youtube.com/watch?v=up8ODGFWgFg")
-```
-
-Markdown syntax:
-
-![](https://www.youtube.com/watch?v=up8ODGFWgFg){width="90%"}
-
-
-You may need to push your updates to GitHub to see if the videos work.
-
-
-
-
-## Equations
-
-You might include equations if part of the purpose of your blog is to explain a statistical method. There are two ways to include equations:
-
-* Inline: $b \sim N(0, \sigma^2_b)$
-* Display-style (displayed on its own line): 
-$$\frac{\sigma^2_b}{\sigma^2_b + \sigma^2_e}$$
-
-For typesetting equations appropriately, check out the [AMS-LaTeX quick reference](https://github.com/manuelemacchia/math-latex/blob/master/amsmath.pdf) or take a look at the *Symbols in math mode* section of this  [cheat sheet](https://users.dickinson.edu/~richesod/latex/latexcheatsheet.pdf)  (or do some extra Googling---there are *many* resources).
-
-
-
-# Formatting
-
-## Tabbed subsections {.tabset}
-
-Each subsection below the "Tabbed subsections" section heading will appear in a tab. See R Markdown Cookbook [Section 7.6: Put content in tabs](https://bookdown.org/yihui/rmarkdown-cookbook/html-tabs.html) for additional customization options. 
-
-### Bulleted list
-
-You can make a bulleted list like this:
-
-* item 1
-* item 2
-* item 3
-
-
-### Numbered list
-
-
-You can make a numbered list like this
-
-1. First thing I want to say
-2. Second thing I want to say
-3. Third thing I want to say
-
-
-
-## Column formatting
-
-<!-- Begin columns environment -->
-:::::: {style="display: flex; font-size: large;"}
-
-<!-- Create a column -->
-::: {}
-### Content Column 1
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vel ipsum eu sem facilisis porttitor. Integer eu tristique lectus. Vestibulum nisi risus, porta sit amet cursus nec, auctor ac tellus. Integer egestas viverra rhoncus. Fusce id sem non ante vestibulum posuere ac sed lorem. Proin id felis a mi pellentesque viverra in at nulla. Duis augue nulla, aliquet ac ligula a, sagittis varius lorem.
-
-
-
-:::
-
-<!-- Create another column (this one is just adding horizontal space to separate content) -->
-::: {}
-<div class="horizontalgap" style="width:60px"></div>
-:::
-
-<!-- Create another column -->
-::: {}
-
-### Content Column 2
-
-Aliquam non ante et erat luctus hendrerit eu ac justo. Fusce lacinia pulvinar neque non laoreet. Fusce vitae mauris pharetra, scelerisque purus eget, pharetra nisl. Aenean volutpat elementum tortor vitae rhoncus. Phasellus nec tellus euismod neque congue imperdiet tincidunt in mauris. Morbi eu lorem molestie, hendrerit lorem nec, semper massa. Sed vulputate hendrerit ex, eget cursus purus. Pellentesque consequat erat leo, eleifend porttitor lacus porta at. Vivamus faucibus quam ipsum, id condimentum ligula malesuada ultrices. Nullam luctus leo elit, vitae rutrum nibh venenatis eget. Nam at sodales purus. Proin nulla tellus, lacinia eget pretium sed, vehicula aliquet neque. Morbi vel eros elementum, suscipit elit eu, consequat libero. Nulla nec aliquet neque. Nunc bibendum sapien lectus, sed elementum nisi rutrum non. Ut vulputate at lacus eget maximus.
-
-```{r, out.width="80%", fig.align="right"}
-mtcars %>% 
-  ggplot(aes(x = wt, y = mpg)) +
-  geom_point()
-```
-
-:::
-::::::
-<!-- End columns environment with matching length indicator-->
-
-
-
-
-# Customizing your blog design
-
-
-As a *final* detail **only** if you have time, you can explore options for customizing the style of your blog. By default, we are using the `readthedown` theme from the [**rmdformats** package](https://github.com/juba/rmdformats) (see Line 6 of this file if you want to switch out themes).
-
-
-## Theme
-You can use the [**rmdformats** package](https://github.com/juba/rmdformats) to play around with some pre-built themes. There are, I'm sure, many many many more similar packages with built in themes, or you can look into how to include a CSS code chunk to customize aspects of a theme.  
-
-Using the **rmdformats** package, you can change the theme itself (Line 6): 
-
-* `rmdformats::readthedown`
-* `rmdformats::downcute` 
-  * For `downcute` only, you can add a new indented line below Line 6 with the code `downcute_theme: "chaos"` for the `downcute chaos` theme
-* `rmdformats::robobook` 
-* `rmdformats::material`
-
-You can explore additional YAML options by looking at the [**rmdformats** package](https://github.com/juba/rmdformats) page or running, for example, `?rmdformats::readthedown()` to see the help documentation for a particular theme from the package. 
-
-## Synax highlighting
-
-You can also change the code chunk syntax highlighting option (Line 7, `highlight`): 
-
-* `"default"`
-* `"tango"`
-* `"pygments"`
-* `"kate"`
-* `"monochrome"`
-* `"espresso"`
-* `"zenburn"`
-* `"haddock"`
-* `"textmate"` 
-* `NULL` for no syntax highlighting (not recommended)
-
-## Font size, type, and other customization
-
-Further customization requires adding a CSS style file or code chunk or incorporating other development options. Customization beyond the **rmdformats** package should be your lowest and final priority for the project. Ensure your content is fully prepared first.
-
-
-# References
-
-All data sources, any key R packages, and any other sources used in developing your blog should be cited in full in a list of references at the end of your blog. Your blog post should also link to these sources as they are discussed. You may choose any reference style as long as sources are fully cited (try to be consistent!).
-
-Typically, references in R Markdown (and LaTeX) files are [incorporated with a BibTeX database](https://bookdown.org/yihui/rmarkdown-cookbook/bibliography.html) (a .bib file). You can try this approach or manually include either a numbered or alphabetized list. 
-
-Columbia University has compiled some guidance on [how to cite data](https://guides.library.columbia.edu/datacitation). Some data sources will give you the citation information to copy and paste. Use the provided citations or citation styles in those cases.
-
-You can list R package citations with the code `citation("packageName")` in the console and then copy (and reformat as needed) the relevant text, e.g.,
-```{r}
-citation("DT")
-```
-
-The following citations are based on the American Statistical Association citation style (not all of these references are used in this document).:
-
-
-<!-- Textbook -->
-Baumer, B. S., Kaplan, D. T., and Horton, N. J. (2021), *Modern Data Science with R* (2nd ed.), Boca Raton, FL: CRC Press.
-
-<!-- Journal article -->
-Broman, K. W. and Woo, K. H. (2018), "Data Organization in Spreadsheets," *The American Statistician*, 72:1, 2-10, doi: [10.1080/00031305.2017.1375989](https://doi.org/10.1080/00031305.2017.1375989)
-
-<!-- Website -->
-Columbia University Libraries (n.d.), "Data Citation," available at <https://guides.library.columbia.edu/datacitation>.
-
-<!-- Journal article -->
-McNamara, A. and Horton N. J. (2018) "Wrangling Categorical Data in R," *The American Statistician*, 72:1, 97-104, doi: [10.1080/00031305.2017.1356375](https://doi.org/10.1080/00031305.2017.1356375).
-
-<!-- Dataset -->
-Shah, Syed A. A. (October 2022), "Starbucks Drinks" (Version 1), *Kaggle*, available at <https://www.kaggle.com/datasets/syedasimalishah/starbucks-drinks>.
-
-<!-- R package -->
-Xie Y, Cheng J, Tan X (2022). "DT: A Wrapper of the JavaScript Library 'DataTables'," R package version 0.24, available at <https://CRAN.R-project.org/package=DT>.
+## Analysis
   
+  
+
+
+#Final Thoughts Of Results
 
 
  
