--- a/index.Rmd
+++ b/index.Rmd
@@ -230,9 +230,10 @@ Out of these countries it appears that the Czech Republic and Russia are at the 
 
 # NFL 
 
-The NFL draft process occurs when NFL teams pick players, often attending and playing in colleges and universities across the country. The pattern that most typically occurs is the best college football players in the country are often picked in the first couple of rounds. For example, the first player picked in the first round of the draft is likely very talented and highly sought-after. A player’s performance at their college or university is an important consideration for how likely, or quickly they will be picked by an NFL. Something to consider when looking at players drafted in the NFL and their corresponding college is whether there are certain college football teams that produce some of the first picks in the NFL draft. Throughout this analysis we can determine which U.S. states produce some of the top overall NFL draft picks over fifteen years. This information can help us identify states with the top college football players, as well as determine if there are any correlations between the state a player went to school in and the NFL team they were drafted to. 
+The NFL draft process occurs when NFL teams pick players, often attending and playing in colleges and universities across the country. The pattern that most typically occurs is the best college football players in the country are often picked in the first couple of rounds. For example, the first player picked in the first round of the draft is likely very talented and highly sought-after. A player’s performance at their college or university is an important consideration for how likely, or quickly they will be picked by an NFL team. Something to consider when looking at players drafted in the NFL, and their corresponding college, is whether there are certain college football teams that produce some of the first picks in the NFL draft. Throughout this analysis we can determine which U.S. states produce some of the top overall NFL draft picks over fifteen years. This information can help us identify states with the top college football players, as well as determine if there are any correlations between the state a player went to school in and the NFL team they were drafted to. 
 
-Draft data is used throughout fifteen years (2006 to 2021). Before analyzing this topic, I had hypothesized that states such as Alabama, Texas, and Louisiana would have some of the highest overall draft picks. I thought this based on the stigma around large football schools in these states, and how seemingly successful they have been over the past few years. However, after using spatial visualizations to further analyze this data I found that states such as New York, Oregon, Wyoming, and Utah have had college football players drafted in the first round and had overall picks of ten or higher, over the period from 2006 to 2021. On the map provided above, these states are colored in red and orange, indicating a player picked relatively high in the first round. Something to consider when looking at this data is that the map only shows data for the first round of the NFL draft, when in reality, there are seven rounds total. If we were to alter the data and look at different rounds, we might see different results. Populations that could find these results interesting are high school recruits whose goal is to make it to the NFL. They could look at the map, or use the search function in the table to see which college or university has consistently sent players to the NFL. To personalize these results further, high school football recruits could search their position and determine what school, and NFL team, previous players have gone to.
+The data below represents the NFL draft process over a fifteen year period (2006 to 2021). Including in this data included players' names, school they attended, NFL team they were drafted to, the overall pick of each player (ranged 1-32), and the year players were drafted. The map below specifically looks at players' colleges and universities in states across the country and that players' corresponding overall pcik number. 
+
 
 ```{r include=FALSE}
 #import the NFL draft dataset
@@ -363,7 +364,11 @@ ggplot(nfl_final, aes(geometry=geom, fill = Overall)) +
        , title = "  U.S. College Football Athletes Drafted in the First Round (from 2006 to 2021)") +
          theme(legend.position="bottom") +
   scale_fill_distiller(palette = "Spectral", direction = 1) 
-  
+```
+
+
+The table below includes results from the NFL Draft process from 2006 to 2021:
+```{r echo=FALSE, message=FALSE}
 #user interactive table 
 library(DT)
 nfl_final %>% 
@@ -374,7 +379,9 @@ nfl_final %>%
             options = list(pageLength = 10, autoWidth = TRUE))
 ```
 
-## Analysis
+## Analysis of Results 
+
+Before analyzing this topic, I had hypothesized that states such as Alabama, Texas, and Louisiana would have some of the highest overall draft picks. I thought this based on the stigma around large football schools in these states, and how seemingly successful they have been over the past few years. However, after using spatial visualizations to further analyze this data I found that states such as New York, Oregon, Wyoming, and Utah have had college football players drafted in the first round and had overall picks of ten or higher, over the period from 2006 to 2021. On the map provided above, these states are colored in red and orange, indicating a player picked relatively high in the first round. Something to consider when looking at this data is that the map only shows data for the first round of the NFL draft, when in reality, there are seven rounds total. If we were to alter the data and look at different rounds, we might see different results. Populations that could find these results interesting are high school recruits whose goal is to make it to the NFL. They could look at the map, or use the search function in the table to see which college or university has consistently sent players to the NFL. To personalize these results further, high school football recruits could search their position and determine what school, and NFL team, previous players have gone to.
 
 
 # NBA
