--- a/index.Rmd
+++ b/index.Rmd
@@ -386,7 +386,9 @@ nfl_final %>%
 
 ## Analysis of Results 
 
-Before analyzing this topic, I had hypothesized that states such as Alabama, Texas, and Louisiana would have some of the highest overall draft picks. I thought this based on the stigma around large football schools in these states, and how seemingly successful they have been over the past few years. However, after using spatial visualizations to further analyze this data I found that states such as New York, Oregon, Wyoming, and Utah have had college football players drafted in the first round and had overall picks of ten or higher, over the period from 2006 to 2021. On the map provided above, these states are colored in red and orange, indicating a player picked relatively high in the first round. Something to consider when looking at this data is that the map only shows data for the first round of the NFL draft, when in reality, there are seven rounds total. If we were to alter the data and look at different rounds, we might see different results. Populations that could find these results interesting are high school recruits whose goal is to make it to the NFL. They could look at the map, or use the search function in the table to see which college or university has consistently sent players to the NFL. To personalize these results further, high school football recruits could search their position and determine what school, and NFL team, previous players have gone to.
+Before analyzing this topic, we had hypothesized that states such as Alabama, Texas, and Louisiana would have some of the highest overall draft picks. I thought this based on the stigma around large football schools in these states, and how seemingly successful they have been over the past few years. However, after using spatial visualizations to further analyze this data we found that states such as New York, Oregon, Wyoming, and Utah have had college football players drafted in the first round and had overall picks of ten or higher, over the period from 2006 to 2021. On the map provided above, these states are colored in red and orange, indicating a player picked relatively high in the first round. Something to consider when looking at this data is that the map only shows data for the first round of the NFL draft, when in reality, there are seven rounds total. If we were to alter the data and look at different rounds, we might see different results. Populations that could find these results interesting are high school recruits whose goal is to make it to the NFL. They could look at the map, or use the search function in the table to see which college or university has consistently sent players to the NFL. To personalize these results further, high school football recruits could search their position and determine what school, and NFL team, previous players have gone to.
+
+Another aspect of the map to consider are the states colored in gray. The grsy-colored states represent states for which there are no colleges that sent players to the first round of the NFL draft from the years 2006 to 2021. We can see there is a concentration of these states in the far northeast portion on the map, considerably the states Maine, Vermont, New Hampshire, and Rhode Island. It is widely assumed and stereotyped that some of the best college football schools are located in the southern and mid-Atlantic portion of the U.S. From these results we can confirm this assumption and determine that some of the most northern states in the country are not as successful, or do not have as talented players, attending school in these states. 
 
 
 # NBA
