--- a/index.Rmd
+++ b/index.Rmd
@@ -118,7 +118,7 @@ nhlmosteffectivetotal1 <- nhlmosteffective %>%
 INSERT PHOTO
 
 Once I created the variable I aimed to explore what countries produce the best valued picks. To gauge this I averaged the value of each pick for each country represented in the data set and the results are shown in the figure below:
-```{r echo=FALSE, message=FALSE, fig.height=3}
+```{r echo=FALSE, message=FALSE, fig.height= 3}
 #This data is only representative of skaters
 #make variable that multiplies pick in draft to winshares
 nhlmosteffectiveskater1 <- nhlmosteffectivetotal1 %>%
@@ -145,7 +145,8 @@ ggplot(playerworldranking, aes(geometry = geom, fill = avgpickvalue)) +
   theme_void() +
   labs(fill = "Value Of Pick Ranking"
        , title = "Best Valued Skater Picks Based on Home Country")+
-  scale_fill_viridis(option = "magma", direction = -1)
+  scale_fill_viridis(option = "magma", direction = -1) +
+  theme(legend.position = "top")
 
 #ggplotly()
 ```
